Model-free rl - qlearning notebook

--- a/notebooks/notebook-4.ipynb
+++ b/notebooks/notebook-4.ipynb
@@ -7,123 +7,123 @@
     "editable": true
    },
    "source": [
-    "* Apply TD(Lambda)\n",
-    "* Apply Q-Learning\n",
-    "* Apply SARSA\n",
-    "* Apply \"Learning Model\" (Guided Policy Search??)"
+    "### Model-Free Reinforcement Learning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2017-03-27 20:11:56,316] Making new env: Taxi-v2\n",
-      "[2017-03-27 20:11:56,335] Creating monitor directory /tmp/taxi-v2\n",
-      "[2017-03-27 20:11:56,338] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000000.json\n",
-      "[2017-03-27 20:11:56,380] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000001.json\n",
-      "[2017-03-27 20:11:56,445] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000008.json\n",
-      "[2017-03-27 20:11:56,566] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000027.json\n",
-      "[2017-03-27 20:11:56,727] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000064.json\n",
-      "[2017-03-27 20:11:56,899] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000125.json\n",
-      "[2017-03-27 20:11:57,065] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000216.json\n",
-      "[2017-03-27 20:11:57,185] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000343.json\n",
-      "[2017-03-27 20:11:57,376] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000512.json\n",
-      "[2017-03-27 20:11:57,694] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000729.json\n",
-      "[2017-03-27 20:11:57,922] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video001000.json\n",
-      "[2017-03-27 20:11:58,740] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video002000.json\n",
-      "[2017-03-27 20:11:59,519] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video003000.json\n",
-      "[2017-03-27 20:12:00,310] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video004000.json\n",
-      "[2017-03-27 20:12:01,069] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video005000.json\n",
-      "[2017-03-27 20:12:02,032] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video006000.json\n",
-      "[2017-03-27 20:12:03,192] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video007000.json\n",
-      "[2017-03-27 20:12:04,223] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video008000.json\n",
-      "[2017-03-27 20:12:05,125] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video009000.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import gym\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import tempfile\n",
+    "import pprint\n",
+    "import json\n",
+    "import sys\n",
+    "import gym\n",
     "\n",
     "from gym import wrappers\n",
-    "\n",
-    "alpha = 0.9\n",
-    "gamma = 0.9\n",
-    "\n",
-    "env = gym.make('Taxi-v2')\n",
-    "env = wrappers.Monitor(env, '/tmp/taxi-v2', force=True)\n",
-    "\n",
-    "q = np.random.random((env.env.observation_space.n, \n",
-    "                      env.env.action_space.n))\n",
-    "\n",
-    "def exploration(episode):\n",
-    "    return 0.5 if episode < 10000 else 0.999\n",
-    "\n",
-    "for episode in range(10000):\n",
-    "    state = env.reset()\n",
-    "\n",
-    "    while True:\n",
-    "        if np.random.random() > exploration(episode):\n",
-    "            action = env.action_space.sample()\n",
-    "        else:\n",
-    "            action = np.argmax(q[state])\n",
-    "        nstate, reward, done, _ = env.step(action)\n",
-    "        if done:\n",
-    "            q[state][action] = q[state][action] + alpha * (reward - q[state][action])\n",
-    "            break\n",
-    "        else:\n",
-    "            q[state][action] = q[state][action] + alpha * (reward + gamma * q[nstate].max() - q[state][action])\n",
-    "        state = nstate\n",
-    "        #env.render()"
+    "from subprocess import check_output\n",
+    "from IPython.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Q-Learning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/tmp/taxi-v2/openaigym.video.0.31.video009000.json'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "env.videos[-1][0]"
+    "def action_selection(state, Q, episode, n_episodes):\n",
+    "    epsilon = max(0, episode/n_episodes*2)\n",
+    "    if np.random.random() < epsilon:\n",
+    "        action = np.random.randint(len(Q[0]))\n",
+    "    else:\n",
+    "        action = np.argmax(Q[state])\n",
+    "    return action"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from subprocess import check_output\n",
+    "def q_learning(env, alpha = 0.9, gamma = 0.9):\n",
+    "    nS = env.env.observation_space.n\n",
+    "    nA = env.env.action_space.n\n",
+    "    \n",
+    "    Q = np.random.random((nS, nA)) * 2.0\n",
+    "    n_episodes = 10000\n",
+    "    \n",
+    "    for episode in range(n_episodes//2, -n_episodes//2, -1):\n",
+    "        state = env.reset()\n",
+    "        done = False\n",
+    "        while not done:\n",
+    "            action = action_selection(state, Q, episode, n_episodes)\n",
+    "            nstate, reward, done, info = env.step(action)\n",
+    "            Q[state][action] += alpha * (reward + gamma * Q[nstate].max() * (not done) - Q[state][action])\n",
+    "            state = nstate\n",
+    "    return Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-04-02 00:40:36,000] Making new env: FrozenLake-v0\n",
+      "[2017-04-02 00:40:36,013] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000000.json\n",
+      "[2017-04-02 00:40:36,015] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000001.json\n",
+      "[2017-04-02 00:40:36,023] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000008.json\n",
+      "[2017-04-02 00:40:36,040] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000027.json\n",
+      "[2017-04-02 00:40:36,060] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000064.json\n",
+      "[2017-04-02 00:40:36,096] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000125.json\n",
+      "[2017-04-02 00:40:36,135] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000216.json\n",
+      "[2017-04-02 00:40:36,181] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000343.json\n",
+      "[2017-04-02 00:40:36,249] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000512.json\n",
+      "[2017-04-02 00:40:36,330] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video000729.json\n",
+      "[2017-04-02 00:40:36,412] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video001000.json\n",
+      "[2017-04-02 00:40:36,765] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video002000.json\n",
+      "[2017-04-02 00:40:37,084] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video003000.json\n",
+      "[2017-04-02 00:40:37,493] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video004000.json\n",
+      "[2017-04-02 00:40:38,138] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video005000.json\n",
+      "[2017-04-02 00:40:39,366] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video006000.json\n",
+      "[2017-04-02 00:40:40,596] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video007000.json\n",
+      "[2017-04-02 00:40:41,716] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video008000.json\n",
+      "[2017-04-02 00:40:43,030] Starting new video recorder writing to /tmp/tmpww4igizw/openaigym.video.0.379.video009000.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "mdir = tempfile.mkdtemp()\n",
+    "env = gym.make('FrozenLake-v0')\n",
+    "env = wrappers.Monitor(env, mdir, force=True)\n",
     "\n",
-    "out = check_output([\"asciinema\", \"upload\", env.videos[-1][0]])\n",
-    "out = out.decode(\"utf-8\").replace('\\n', '').replace('\\r', '')"
+    "Q = q_learning(env)"
    ]
   },
   {
@@ -134,42 +134,29 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://asciinema.org/a/4j5gomj8esht8vx81sicn8sda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(out)"
+    "videos = np.array(env.videos)\n",
+    "n_videos = 5\n",
+    "\n",
+    "idxs = np.linspace(0, len(videos) - 1, n_videos).astype(int)\n",
+    "videos = videos[idxs,:]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'4j5gomj8esht8vx81sicn8sda'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "castid = out.split('/')[-1]\n",
-    "castid"
+    "urls = []\n",
+    "for i in range(n_videos):\n",
+    "    out = check_output([\"asciinema\", \"upload\", videos[i][0]])\n",
+    "    out = out.decode(\"utf-8\").replace('\\n', '').replace('\\r', '')\n",
+    "    urls.append([out])\n",
+    "videos = np.concatenate((videos, urls), axis=1)"
    ]
   },
   {
@@ -177,19 +164,48 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<script type=\"text/javascript\" \n",
-       "    src=\"https://asciinema.org/a/4j5gomj8esht8vx81sicn8sda.js\" \n",
-       "    id=\"asciicast-4j5gomj8esht8vx81sicn8sda\" \n",
-       "    async data-autoplay=\"true\" data-size=\"big\">\n",
-       "</script>\n"
+       "    <h2>Episode 0\n",
+       "    <script type=\"text/javascript\" \n",
+       "        src=\"https://asciinema.org/a/80rz4ewmpjbux3ptqdib1yzb7.js\" \n",
+       "        id=\"asciicast-80rz4ewmpjbux3ptqdib1yzb7\" \n",
+       "        async data-autoplay=\"true\" data-size=\"big\">\n",
+       "    </script>\n",
+       "    \n",
+       "    <h2>Episode 64\n",
+       "    <script type=\"text/javascript\" \n",
+       "        src=\"https://asciinema.org/a/6mmdlm9wr1lamfrhpmror4ln4.js\" \n",
+       "        id=\"asciicast-6mmdlm9wr1lamfrhpmror4ln4\" \n",
+       "        async data-autoplay=\"true\" data-size=\"big\">\n",
+       "    </script>\n",
+       "    \n",
+       "    <h2>Episode 729\n",
+       "    <script type=\"text/javascript\" \n",
+       "        src=\"https://asciinema.org/a/7wixe6i8hjqqk6xole5ts13vw.js\" \n",
+       "        id=\"asciicast-7wixe6i8hjqqk6xole5ts13vw\" \n",
+       "        async data-autoplay=\"true\" data-size=\"big\">\n",
+       "    </script>\n",
+       "    \n",
+       "    <h2>Episode 4000\n",
+       "    <script type=\"text/javascript\" \n",
+       "        src=\"https://asciinema.org/a/5zj895a2qaldcs5vgj25jug89.js\" \n",
+       "        id=\"asciicast-5zj895a2qaldcs5vgj25jug89\" \n",
+       "        async data-autoplay=\"true\" data-size=\"big\">\n",
+       "    </script>\n",
+       "    \n",
+       "    <h2>Episode 9000\n",
+       "    <script type=\"text/javascript\" \n",
+       "        src=\"https://asciinema.org/a/abbolnd4c4n758cpt564kj6fl.js\" \n",
+       "        id=\"asciicast-abbolnd4c4n758cpt564kj6fl\" \n",
+       "        async data-autoplay=\"true\" data-size=\"big\">\n",
+       "    </script>\n",
+       "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -201,51 +217,121 @@
     }
    ],
    "source": [
-    "from IPython.display import HTML\n",
+    "strm = ''\n",
+    "for video_path, meta_path, url in videos:\n",
     "\n",
-    "html_tag = \"\"\"\n",
-    "<script type=\"text/javascript\" \n",
-    "    src=\"https://asciinema.org/a/{0}.js\" \n",
-    "    id=\"asciicast-{0}\" \n",
-    "    async data-autoplay=\"true\" data-size=\"big\">\n",
-    "</script>\n",
-    "\"\"\"\n",
-    "html_tag = html_tag.format(castid)\n",
-    "HTML(data=html_tag)"
+    "    with open(meta_path) as data_file:    \n",
+    "        meta = json.load(data_file)\n",
+    "    castid = url.split('/')[-1]\n",
+    "    html_tag = \"\"\"\n",
+    "    <h2>{0}\n",
+    "    <script type=\"text/javascript\" \n",
+    "        src=\"https://asciinema.org/a/{1}.js\" \n",
+    "        id=\"asciicast-{1}\" \n",
+    "        async data-autoplay=\"true\" data-size=\"big\">\n",
+    "    </script>\n",
+    "    \"\"\"\n",
+    "    strm += html_tag.format('Episode ' + str(meta['episode_id']),\n",
+    "                               castid)\n",
+    "HTML(data=strm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.02811639,  0.0095337 ,  0.01137065,  0.01803616,  0.156215  ,\n",
+       "        1.09083691,  0.01094503,  1.93693217,  0.16369259,  0.53101062,\n",
+       "        0.15193081,  1.65656898,  1.66693547,  0.39044957,  0.46077878,\n",
+       "        1.93756701])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V = np.max(Q, axis=1)\n",
+    "V"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 1, 3, 0, 3, 2, 3, 3, 1, 0, 2, 0, 2, 1, 3])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pi = np.argmax(Q, axis=1)\n",
+    "pi"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-04-02 00:40:50,753] Finished writing results. You can upload them to the scoreboard via gym.upload('/tmp/tmpww4igizw')\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-04-02 00:40:50,777] [FrozenLake-v0] Uploading 10000 episodes of training data\n",
+      "[2017-04-02 00:40:52,390] [FrozenLake-v0] Uploading videos of 19 training episodes (1810 bytes)\n",
+      "[2017-04-02 00:40:52,639] [FrozenLake-v0] Creating evaluation object from /tmp/tmpww4igizw with learning curve and training video\n",
+      "[2017-04-02 00:40:52,874] \n",
+      "****************************************************\n",
+      "You successfully uploaded your evaluation on FrozenLake-v0 to\n",
+      "OpenAI Gym! You can find it at:\n",
+      "\n",
+      "    https://gym.openai.com/evaluations/eval_hGg7u5NwS1a35elvMZC0Q\n",
+      "\n",
+      "****************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "gym.upload(mdir, api_key='<YOUR OPENAI API KEY>')"
+   ]
   }
  ],
  "metadata": {
