--- a/notebooks/05_state_discretization.ipynb
+++ b/notebooks/05_state_discretization.ipynb
@@ -374,7 +374,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -413,7 +415,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Digitizing values"
    ]
@@ -422,7 +427,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -967,14 +974,16 @@
     }
    ],
    "source": [
-    "gym.upload(mdir, api_key='sk_2Z7ZMK8RRaiIU5WVirHYGg')"
+    "gym.upload(mdir, api_key='<YOUR API KEY>')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1081,7 +1090,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1105,7 +1116,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Your turn"
    ]
@@ -1748,7 +1762,7 @@
     }
    ],
    "source": [
-    "gym.upload(mdir, api_key='sk_2Z7ZMK8RRaiIU5WVirHYGg')"
+    "gym.upload(mdir, api_key='<YOUR API KEY>')"
    ]
   },
   {
