--- a/notebooks/09-multi-agent-rl.ipynb
+++ b/notebooks/09-multi-agent-rl.ipynb
@@ -25,6 +25,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
