Working on the final paper and project commit

--- a/notebooks/solutions/03-planning-algorithms.ipynb
+++ b/notebooks/solutions/03-planning-algorithms.ipynb
@@ -769,7 +769,14 @@
    "source": [
     "def policy_iteration(S, A, P, gamma=.99):\n",
     "    pi = np.random.choice(A, len(S))\n",
-    "    \"\"\" YOU COMPLETE THIS METHOD \"\"\"\n",
+    "    while True:    \n",
+    "        V = policy_evaluation(pi, S, A, P, gamma)\n",
+    "        new_pi, new_V = policy_improvement(\n",
+    "            pi.copy(), V.copy(), S, A, P, gamma)\n",
+    "        if np.all(pi == new_pi):\n",
+    "            break\n",
+    "        pi = new_pi\n",
+    "        V = new_V\n",
     "    return pi"
    ]
   },
