--- a/notebooks/solutions/04-q-learning.ipynb
+++ b/notebooks/solutions/04-q-learning.ipynb
@@ -518,7 +518,11 @@
    "outputs": [],
    "source": [
     "def action_selection(state, Q, episode, n_episodes, decay=0.0006, initial=1.00):\n",
-    "    \"\"\" YOU WRITE THIS METHOD \"\"\"\n",
+    "    epsilon = initial * math.exp(-decay*episode)\n",
+    "    if np.random.random() < epsilon:\n",
+    "        action = np.random.randint(len(Q[0]))\n",
+    "    else:\n",
+    "        action = np.argmax(Q[state])\n",
     "    return action, epsilon"
    ]
   },
