--- a/notebooks/solutions/05-state-discretization.ipynb
+++ b/notebooks/solutions/05-state-discretization.ipynb
@@ -2521,8 +2521,9 @@
     }
    ],
    "source": [
-    "x1 = # Set this to a better value\n",
-    "y1 = # Set this to a better value\n",
+    "x1 = np.linspace(x_thres[0] + .5, x_thres[1] - .5, \n",
+    "                 2, endpoint=False)[1:]\n",
+    "y1 = np.zeros(len(x1)) + 0.05\n",
     "\n",
     "plt.ylim([-0.075, 0.075])\n",
     "plt.plot(x1, y1, 'o')\n",
@@ -2560,7 +2561,11 @@
     }
    ],
    "source": [
-    "xd1 = # Set this to some better value\n",
+    "all_vals = np.sort(np.append(\n",
+    "    (np.logspace(-5, 4, 5, endpoint=False, base=2)[1:],\n",
+    "    -np.logspace(-5, 4, 5, endpoint=False, base=2)[1:]), 0))\n",
+    "idxs = np.where(np.abs(all_vals) < 2)\n",
+    "xd1 = all_vals[idxs]\n",
     "y1 = np.zeros(len(xd1)) + 0.05\n",
     "\n",
     "plt.ylim([-0.075, 0.075])\n",
@@ -2599,7 +2604,11 @@
     }
    ],
    "source": [
-    "a1 = # Set this to some better value\n",
+    "all_vals = np.sort(np.append(\n",
+    "    (np.logspace(-6, 0.01, 4, endpoint=False, base=2)[1:],\n",
+    "    -np.logspace(-6, 0.01, 4, endpoint=False, base=2)[1:]), 0))\n",
+    "idxs = np.where(np.abs(all_vals) < a_thres[1] - 0.1)\n",
+    "a1 = all_vals[idxs]\n",
     "y1 = np.zeros(len(a1)) + 0.05\n",
     "\n",
     "plt.ylim([-0.1, 0.1])\n",
@@ -2638,7 +2647,11 @@
     }
    ],
    "source": [
-    "ad1 = # Set this to some better value\n",
+    "all_vals = np.sort(np.append(\n",
+    "    (np.logspace(-7, 4, 6, endpoint=False, base=2)[1:],\n",
+    "    -np.logspace(-7, 4, 6, endpoint=False, base=2)[1:]), 0))\n",
+    "idxs = np.where(np.abs(all_vals) < 2)\n",
+    "ad1 = all_vals[idxs]\n",
     "y1 = np.zeros(len(ad1)) + 0.05\n",
     "\n",
     "plt.ylim([-0.075, 0.075])\n",
