--- a/notebooks/solutions/06-function-approximation.ipynb
+++ b/notebooks/solutions/06-function-approximation.ipynb
@@ -720,11 +720,9 @@
     "    memory_bank_size = 100000\n",
     "    \n",
     "    # function approximator\n",
-    "    #### THIS IS A WEAK NEURAL NETWORK\n",
-    "    #### CAN YOU HELP THE AGENT LEARN MORE\n",
-    "    #### COMPLEX OBSERVATIONS?????\n",
     "    model = Sequential()\n",
-    "    model.add(Dense(64, input_dim=nS, activation='relu'))\n",
+    "    model.add(Dense(128, input_dim=nS, activation='relu'))\n",
+    "    model.add(Dense(128, activation='relu'))\n",
     "    model.add(Dense(nA, activation='linear'))\n",
     "    model.compile(loss='mse', optimizer='adam')\n",
     "\n",
