--- a/notebooks/solutions/02-dynamic-programming.ipynb
+++ b/notebooks/solutions/02-dynamic-programming.ipynb
@@ -560,8 +560,19 @@
    "source": [
     "m = {}\n",
     "def cheapestm(s, d, c):\n",
-    "    \"\"\" YOU WRITE THIS FUNCTION \"\"\"\n",
-    "    return 0"
+    "    if s == d or s == d - 1:\n",
+    "        return c[s][d]\n",
+    "\n",
+    "    if s in m and d in m[s]:\n",
+    "        return m[s][d]\n",
+    "        \n",
+    "    cheapest = c[s][d]\n",
+    "    for i in range(s + 1, d):\n",
+    "        tmp = cheapestm(s, i, c) + cheapestm(i, d, c)\n",
+    "        cheapest = tmp if tmp < cheapest else cheapest\n",
+    "    m[s] = {}\n",
+    "    m[s][d] = cheapest\n",
+    "    return m[s][d]"
    ]
   },
   {
@@ -617,8 +628,12 @@
    "outputs": [],
    "source": [
     "def cheapestdp(s, d, c):\n",
-    "    \"\"\" YOU WRITE THIS FUNCTION \"\"\"\n",
-    "    return 0"
+    "    cheapest = c[0]\n",
+    "    for i in range(2, len(c)):\n",
+    "        for j in range(1, i):\n",
+    "            new_route = cheapest[j] + c[j][i]\n",
+    "            cheapest[i] = new_route if cheapest[i] > new_route else cheapest[i] \n",
+    "    return cheapest[-1]"
    ]
   },
   {
